--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "6.1.7",
     "@angular/router": "6.1.7",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "^6.3.3",
     "rxjs-tslint": "^0.1.5",
     "zone.js": "^0.8.26"
